# python_with_one_month

./: LICENSE.md  README.md  pyproject.toml
primeira_semana/: bares_e_pessoas.py  listas.py  perguntas_e_respostas.py  praticas_boolean.py
